@@ -1537,7 +1537,7 @@ value output_string_eval oc s =
 ;
 
 value maxl = ref 78;
-value sep = ref None;
+value sep = Pcaml.inter_phrases;
 value ncip = ref False;
 value comm_after = ref False;
 value type_comm = ref False;
@@ -1744,6 +1744,9 @@ Pcaml.print_implem.val := apply_printer str_item;
 
 Pcaml.add_option "-l" (Arg.Int (fun x -> maxl.val := x))
   "<length>   Maximum line length for pretty printing.";
+
+Pcaml.add_option "-sep_src" (Arg.Unit (fun () -> sep.val := None))
+  "     Read source file for text between phrases.";
 
 Pcaml.add_option "-sep" (Arg.String (fun x -> sep.val := Some x))
   "<string> Use this string between phrases instead of reading source.";
